# pubmed-fetcher

./: .gitignore  README.md  pyproject.toml
pubmed_fetcher/: __init__.py  fetcher.py
scripts/: get_papers_list.py
